--- a/FoldingVideo/build.gradle
+++ b/FoldingVideo/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         google()
         mavenCentral()
     }
+    apply from: "$rootDir/ktlint.gradle"
 }
 
 task clean(type: Delete) {
