Add some windows manager boilerplate
currently using a deprecated approach to inflate fragments. May need to change it to resolve errors

--- a/SourceEditor/app/build.gradle
+++ b/SourceEditor/app/build.gradle
@@ -33,9 +33,11 @@ dependencies {
 
     implementation androidxDependencies.appCompat
     implementation androidxDependencies.constraintLayout
+    implementation androidxDependencies.slidingPaneLayout
     implementation androidxDependencies.lifecycle
     implementation androidxDependencies.ktxCore
     implementation androidxDependencies.ktxFragment
+    implementation androidxDependencies.windowManager
 
     testImplementation testDependencies.junit
 
