--- a/SourceEditor/dependencies.gradle
+++ b/SourceEditor/dependencies.gradle
@@ -7,8 +7,8 @@
 ext {
     gradlePluginVersion = "4.1.1"
     kotlinVersion = "1.4.21"
-    compileSdkVersion = 29
-    buildToolsVersion = '29.0.2'
+    compileSdkVersion = 30
+    buildToolsVersion = '30.0.3'
     targetSdkVersion = compileSdkVersion
     minSdkVersion = compileSdkVersion
 
@@ -26,22 +26,26 @@ ext {
     //AndroidX versions
     appCompatVersion = "1.1.0"
     constraintLayoutVersion = "1.1.3"
+    slidingPaneLayoutVersion = "1.2.0-alpha03"
     lifecycleExtensionsVersion = "2.2.0"
     recyclerViewVersion = "1.1.0"
     cardViewVersion = "1.0.0"
     ktxCoreVersion = "1.2.0"
     ktxFragmentVersion = "1.2.4"
     viewPager2Version = "1.0.0"
+    windowManagerVersion = "1.0.0-alpha09"
 
     androidxDependencies = [
             appCompat       : "androidx.appcompat:appcompat:$appCompatVersion",
             constraintLayout: "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
+            slidingPaneLayout: "androidx.slidingpanelayout:slidingpanelayout:$slidingPaneLayoutVersion",
             lifecycle       : "androidx.lifecycle:lifecycle-extensions:$lifecycleExtensionsVersion",
             recyclerView    : "androidx.recyclerview:recyclerview:$recyclerViewVersion",
             cardView        : "androidx.cardview:cardview:$cardViewVersion",
             ktxCore         : "androidx.core:core-ktx:$ktxCoreVersion",
             ktxFragment     : "androidx.fragment:fragment-ktx:$ktxFragmentVersion",
             viewPager2      : "androidx.viewpager2:viewpager2:$viewPager2Version",
+            windowManager   : "androidx.window:window:$windowManagerVersion",
     ]
 
     //Google dependencies
