--- a/SourceEditor/app/build.gradle
+++ b/SourceEditor/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId 'com.microsoft.device.display.samples.sourceeditor'
-        minSdkVersion 26
+        minSdkVersion 29
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -24,9 +24,9 @@ android {
 }
 
 dependencies {
-    implementation microsoftDependencies.screenManager
+    /*implementation microsoftDependencies.screenManager
     implementation microsoftDependencies.layouts
-    implementation microsoftDependencies.fragmentsHandler
+    implementation microsoftDependencies.fragmentsHandler*/
 
     implementation googleDependencies.material
     implementation kotlinDependencies.kotlinStdlib
@@ -37,7 +37,7 @@ dependencies {
     implementation androidxDependencies.lifecycle
     implementation androidxDependencies.ktxCore
     implementation androidxDependencies.ktxFragment
-    implementation androidxDependencies.windowManager
+    //implementation androidxDependencies.windowManager
 
     testImplementation testDependencies.junit
 
