--- a/SourceEditor/app/src/main/AndroidManifest.xml
+++ b/SourceEditor/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".SourceEditorApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,7 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name="com.microsoft.device.display.samples.sourceeditor.MainActivity">
+        <activity android:name="com.microsoft.device.display.samples.sourceeditor.MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
