--- a/SourceEditor/build.gradle
+++ b/SourceEditor/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${gradlePluginVersion}"
@@ -24,7 +24,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     apply from: "$rootDir/ktlint.gradle"
 }
