--- a/PhotoEditor/app/build.gradle
+++ b/PhotoEditor/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.microsoft.device.display.samples.photoeditor"
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 29
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -32,15 +32,14 @@ android {
 }
 
 dependencies {
-    implementation microsoftDependencies.screenManager
-    implementation microsoftDependencies.layouts
-    implementation microsoftDependencies.fragmentsHandler
+    implementation googleDependencies.material
 
     implementation kotlinDependencies.kotlinStdlib
     implementation androidxDependencies.appCompat
     implementation androidxDependencies.constraintLayout
     implementation androidxDependencies.ktxCore
     implementation androidxDependencies.ktxFragment
+    implementation androidxDependencies.slidingPaneLayout
 
     testImplementation testDependencies.junit
     androidTestImplementation instrumentationTestDependencies.junit
