--- a/PhotoEditor/build.gradle
+++ b/PhotoEditor/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath config.gradlePlugin
@@ -23,7 +23,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     apply from: "$rootDir/ktlint.gradle"
 }
