--- a/PhotoEditor/dependencies.gradle
+++ b/PhotoEditor/dependencies.gradle
@@ -6,8 +6,8 @@
 ext {
     gradlePluginVersion = "4.1.1"
     kotlinVersion = "1.4.21"
-    compileSdkVersion = 29
-    buildToolsVersion = '29.0.2'
+    compileSdkVersion = 30
+    buildToolsVersion = '30.0.3'
     targetSdkVersion = compileSdkVersion
     minSdkVersion = compileSdkVersion
 
@@ -23,12 +23,13 @@ ext {
     ]
 
     //AndroidX versions
-    appCompatVersion = "1.1.0"
-    constraintLayoutVersion = "2.0.0-beta7"
+    appCompatVersion = "1.2.0"
+    constraintLayoutVersion = "2.1.0-beta02"
     recyclerViewVersion = "1.1.0"
     cardViewVersion = "1.0.0"
-    ktxCoreVersion = "1.3.0"
-    ktxFragmentVersion = "1.2.5"
+    ktxCoreVersion = "1.3.2"
+    ktxFragmentVersion = "1.3.1"
+    slidingPaneLayoutVersion = "1.2.0-alpha03"
     viewPager2Version = "1.0.0"
 
     androidxDependencies = [
@@ -38,29 +39,16 @@ ext {
             cardView        : "androidx.cardview:cardview:$cardViewVersion",
             ktxCore         : "androidx.core:core-ktx:$ktxCoreVersion",
             ktxFragment     : "androidx.fragment:fragment-ktx:$ktxFragmentVersion",
+            slidingPaneLayout: "androidx.slidingpanelayout:slidingpanelayout:$slidingPaneLayoutVersion",
             viewPager2      : "androidx.viewpager2:viewpager2:$viewPager2Version"
     ]
 
     //Google dependencies
-    materialVersion = "1.1.0"
+    materialVersion = "1.3.0"
 
     googleDependencies = [
             material: "com.google.android.material:material:$materialVersion"
     ]
-
-    //Microsoft dependencies version
-    screenManagerWindowManagerVersion = config.duoSdkVersion
-    screenManagerDisplayMaskVersion = config.duoSdkVersion
-    fragmentsHandlerVersion = config.duoSdkVersion
-    layoutsVersion = config.duoSdkVersion
-
-    microsoftDependencies = [
-            screenManagerWindowManager: "com.microsoft.device.dualscreen:screenmanager-windowmanager:$screenManagerWindowManagerVersion",
-            screenManagerDisplayMask  : "com.microsoft.device.dualscreen:screenmanager-displaymask:$screenManagerDisplayMaskVersion",
-            fragmentsHandler          : "com.microsoft.device.dualscreen:fragmentshandler:$fragmentsHandlerVersion",
-            layouts                   : "com.microsoft.device.dualscreen:layouts:$layoutsVersion",
-    ]
-    microsoftDependencies["screenManager"] = microsoftDependencies.screenManagerWindowManager
 
     //Test dependencies version
     junitVersion = "4.13"
