--- a/PhotoEditor/app/build.gradle
+++ b/PhotoEditor/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation androidxDependencies.constraintLayout
     implementation androidxDependencies.ktxCore
     implementation androidxDependencies.ktxFragment
-    implementation androidxDependencies.slidingPaneLayout
+    implementation androidxDependencies.windowManager
 
     testImplementation testDependencies.junit
     androidTestImplementation instrumentationTestDependencies.junit
