--- a/PhotoEditor/dependencies.gradle
+++ b/PhotoEditor/dependencies.gradle
@@ -29,8 +29,8 @@ ext {
     cardViewVersion = "1.0.0"
     ktxCoreVersion = "1.3.2"
     ktxFragmentVersion = "1.3.1"
-    slidingPaneLayoutVersion = "1.2.0-alpha03"
     viewPager2Version = "1.0.0"
+    windowManagerVersion = "1.0.0-alpha09"
 
     androidxDependencies = [
             appCompat       : "androidx.appcompat:appcompat:$appCompatVersion",
@@ -39,8 +39,8 @@ ext {
             cardView        : "androidx.cardview:cardview:$cardViewVersion",
             ktxCore         : "androidx.core:core-ktx:$ktxCoreVersion",
             ktxFragment     : "androidx.fragment:fragment-ktx:$ktxFragmentVersion",
-            slidingPaneLayout: "androidx.slidingpanelayout:slidingpanelayout:$slidingPaneLayoutVersion",
-            viewPager2      : "androidx.viewpager2:viewpager2:$viewPager2Version"
+            viewPager2      : "androidx.viewpager2:viewpager2:$viewPager2Version",
+            windowManager   : "androidx.window:window:$windowManagerVersion",
     ]
 
     //Google dependencies
