--- a/TwoDo/app/build.gradle
+++ b/TwoDo/app/build.gradle
@@ -35,13 +35,12 @@ android {
 }
 
 dependencies {
-
+    
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation("androidx.fragment:fragment-ktx:1.3.5")
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    //implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation 'com.google.android.material:material:1.4.0'
 
     implementation 'androidx.window:window:1.0.0-alpha07'
     implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha02"
@@ -53,15 +52,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
-    def lifecycle_version = "2.3.1"
-    def arch_version = "2.1.0"
-    // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-
-
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
