--- a/PhotoEditor/app/build.gradle
+++ b/PhotoEditor/app/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.microsoft.device.display.samples.photoeditor"
+        applicationId "com.microsoft.device.display.wm_samples.photoeditor"
         minSdkVersion 29
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
