--- a/.github/workflows/build_test_check.yml
+++ b/.github/workflows/build_test_check.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        projects: [ FoldingVideo, FoldingVideoPlusChat, SourceEditor ]
+        projects: [ FoldingVideo, FoldingVideoPlusChat, SourceEditor, TwoDo ]
       fail-fast: false
 
     steps:
