--- a/TwoNote/app/build.gradle
+++ b/TwoNote/app/build.gradle
@@ -14,8 +14,8 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.microsoft.device.display.samples.twonote"
-        minSdkVersion 26
+        applicationId "com.microsoft.device.display.wm_samples.twonote"
+        minSdkVersion 29
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -31,13 +31,11 @@ dependencies {
     implementation androidxDependencies.constraintLayout
     implementation androidxDependencies.ktxCore
     implementation androidxDependencies.ktxFragment
+    implementation androidxDependencies.windowManager
 
     implementation googleDependencies.material
 
     implementation microsoftDependencies.fluent
-    implementation microsoftDependencies.fragmentsHandler
-    implementation microsoftDependencies.screenManager
-    implementation microsoftDependencies.layouts
 
     testImplementation testDependencies.junit
     androidTestImplementation instrumentationTestDependencies.junit
