--- a/TwoNote/app/src/main/AndroidManifest.xml
+++ b/TwoNote/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.microsoft.device.display.samples.twonote">
+    package="com.microsoft.device.display.wm_samples.twonote">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -17,10 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".TwoNote"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.microsoft.device.display.samples.twonote.MainActivity">
+        <activity android:name="com.microsoft.device.display.wm_samples.twonote.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
