--- a/TwoNote/dependencies.gradle
+++ b/TwoNote/dependencies.gradle
@@ -6,10 +6,10 @@
  */
 
 ext {
-    gradlePluginVersion = "3.6.3"
-    kotlinVersion = "1.3.72"
-    compileSdkVersion = 29
-    buildToolsVersion = '29.0.2'
+    gradlePluginVersion = "4.1.1"
+    kotlinVersion = "1.4.21"
+    compileSdkVersion = 30
+    buildToolsVersion = '30.0.3'
     targetSdkVersion = compileSdkVersion
     minSdkVersion = compileSdkVersion
 
@@ -26,15 +26,17 @@ ext {
 
     //AndroidX versions
     appCompatVersion = '1.2.0'
-    constraintLayoutVersion = "1.1.3"
-    ktxCoreVersion = '1.3.1'
-    ktxFragmentVersion = '1.2.5'
+    constraintLayoutVersion = "2.1.0-beta02"
+    ktxCoreVersion = '1.3.2'
+    ktxFragmentVersion = '1.3.1'
+    windowManagerVersion = "1.0.0-alpha09"
 
     androidxDependencies = [
             appCompat       : "androidx.appcompat:appcompat:$appCompatVersion",
             constraintLayout: "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
             ktxCore         : "androidx.core:core-ktx:$ktxCoreVersion",
             ktxFragment     : "androidx.fragment:fragment-ktx:$ktxFragmentVersion",
+            windowManager   : "androidx.window:window:$windowManagerVersion",
     ]
 
     //Google dependencies
@@ -45,20 +47,11 @@ ext {
     ]
 
     //Microsoft dependencies version
-    fluentVersion = "1.1.33"
-    screenManagerWindowManagerVersion = config.dualScreenSdkVersion
-    screenManagerDisplayMaskVersion = config.dualScreenSdkVersion
-    fragmentsHandlerVersion = config.dualScreenSdkVersion
-    layoutsVersion = config.dualScreenSdkVersion
+    fluentVersion = "1.1.135"
 
     microsoftDependencies = [
-            screenManagerWindowManager: "com.microsoft.device.dualscreen:screenmanager-windowmanager:$screenManagerWindowManagerVersion",
-            screenManagerDisplayMask  : "com.microsoft.device.dualscreen:screenmanager-displaymask:$screenManagerDisplayMaskVersion",
-            fragmentsHandler          : "com.microsoft.device.dualscreen:fragmentshandler:$fragmentsHandlerVersion",
-            layouts                   : "com.microsoft.device.dualscreen:layouts:$layoutsVersion",
-            fluent                    : "com.microsoft.design:fluent-system-icons:$fluentVersion",
+            fluent: "com.microsoft.design:fluent-system-icons:$fluentVersion@aar"
     ]
-    microsoftDependencies["screenManager"] = microsoftDependencies.screenManagerWindowManager
 
     //Test dependencies version
     junitVersion = "4.13"
