--- a/TwoNote/ktlint.gradle
+++ b/TwoNote/ktlint.gradle
@@ -6,7 +6,7 @@
  */
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 configurations {
@@ -14,7 +14,7 @@ configurations {
 }
 
 dependencies {
-    ktlint "com.pinterest:ktlint:0.37.2"
+    ktlint "com.pinterest:ktlint:0.40.0"
 }
 
 task ktlint(type: JavaExec, group: "verification") {
