--- a/TwoNote/app/build.gradle
+++ b/TwoNote/app/build.gradle
@@ -22,6 +22,10 @@ android {
 
         testInstrumentationRunner config.testInstrumentationRunner
     }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
@@ -36,6 +40,7 @@ dependencies {
     implementation googleDependencies.material
 
     implementation microsoftDependencies.fluent
+    implementation microsoftDependencies.inkView
 
     testImplementation testDependencies.junit
     androidTestImplementation instrumentationTestDependencies.junit
