--- a/TwoNote/app/build.gradle
+++ b/TwoNote/app/build.gradle
@@ -23,6 +23,17 @@ android {
         testInstrumentationRunner config.testInstrumentationRunner
     }
 
+    buildTypes {
+
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
