--- a/TwoNote/app/build.gradle
+++ b/TwoNote/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation googleDependencies.material
 
     implementation microsoftDependencies.fluent
-    implementation microsoftDependencies.inkView
+    implementation project(path: ':ink')
 
     testImplementation testDependencies.junit
     androidTestImplementation instrumentationTestDependencies.junit
