--- a/TwoDo/app/build.gradle
+++ b/TwoDo/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
@@ -38,15 +38,19 @@ android {
 }
 
 dependencies {
-    
+    def slidingpanelayout_version = '1.2.0-SNAPSHOT'
+    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout_version"
+
+    //implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha03"
+    implementation 'androidx.window:window:1.0.0-alpha10'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:1.6.0"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation "androidx.appcompat:appcompat:1.3.1"
     implementation 'com.google.android.material:material:1.4.0'
 
-    implementation 'androidx.window:window:1.0.0-alpha07'
-    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha02"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
