--- a/FoldingVideo/app/build.gradle
+++ b/FoldingVideo/app/build.gradle
@@ -35,12 +35,13 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
-    implementation 'androidx.window:window:1.0.0-alpha08'
+    implementation 'androidx.window:window:1.0.0-alpha10'
     implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
 
 
