--- a/FoldingVideoPlusChat/app/build.gradle
+++ b/FoldingVideoPlusChat/app/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
-    implementation 'androidx.window:window:1.0.0-alpha06'
+    implementation 'androidx.window:window:1.0.0-alpha10'
     implementation "androidx.fragment:fragment-ktx:1.3.4"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
