Adding eBook Sample to repository CI pipeline (#10)
* Added project to pipeline, pushing to test. Some linter changes

* Added missing gradle script files

* Added ktlint, fixed gitignore, and added wrapper jar

* Linting fixes

* More linter fixes

* Last Linting fixes

* Slight linting fixes after merge

--- a/TwoPageEBookReader/build.gradle
+++ b/TwoPageEBookReader/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -24,6 +24,7 @@ allprojects {
             url 'https://androidx.dev/snapshots/builds/7633395/artifacts/repository'
         }
     }
+    apply from: "$rootDir/ktlint.gradle"
 }
 
 task clean(type: Delete) {
