--- a/SourceEditor/dependencies.gradle
+++ b/SourceEditor/dependencies.gradle
@@ -31,7 +31,7 @@ ext {
     ktxCoreVersion = "1.5.0"
     ktxFragmentVersion = "1.3.6"
     viewPager2Version = "1.0.0"
-    windowManagerVersion = "1.0.0-alpha10"
+    windowManagerVersion = "1.0.0-beta01"
 
     androidxDependencies = [
             appCompat       : "androidx.appcompat:appcompat:$appCompatVersion",
