--- a/PhotoEditor/dependencies.gradle
+++ b/PhotoEditor/dependencies.gradle
@@ -6,7 +6,7 @@
 ext {
     gradlePluginVersion = "4.1.1"
     kotlinVersion = "1.4.21"
-    compileSdkVersion = 30
+    compileSdkVersion = 31
     buildToolsVersion = '30.0.3'
     targetSdkVersion = compileSdkVersion
     minSdkVersion = compileSdkVersion
@@ -30,7 +30,7 @@ ext {
     ktxCoreVersion = "1.5.0"
     ktxFragmentVersion = "1.3.6"
     viewPager2Version = "1.0.0"
-    windowManagerVersion = "1.0.0-alpha10"
+    windowManagerVersion = "1.0.0-beta01"
 
     androidxDependencies = [
             appCompat       : "androidx.appcompat:appcompat:$appCompatVersion",
