--- a/TwoDo/app/build.gradle
+++ b/TwoDo/app/build.gradle
@@ -38,10 +38,10 @@ android {
 }
 
 dependencies {
-    def slidingpanelayout_version = '1.2.0-SNAPSHOT'
-    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout_version"
+//    def slidingpanelayout_version = '1.2.0-SNAPSHOT'
+//    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout_version"
 
-    //implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha03"
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha04"
     implementation 'androidx.window:window:1.0.0-alpha10'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
