--- a/TwoPageEBookReader/app/src/main/AndroidManifest.xml
+++ b/TwoPageEBookReader/app/src/main/AndroidManifest.xml
@@ -9,14 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Test4">
-        <activity android:name="com.microsoft.device.wm_samples.ebook_reader_sample.StartActivity">
+        <activity
+            android:name="com.microsoft.device.wm_samples.ebook_reader_sample.StartActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.microsoft.device.wm_samples.ebook_reader_sample.BookActivity"
-            android:configChanges="screenLayout|screenSize|smallestScreenSize|orientation|keyboardHidden">
+        <activity
+            android:name="com.microsoft.device.wm_samples.ebook_reader_sample.BookActivity"
+            android:configChanges="screenLayout|screenSize|smallestScreenSize|orientation|keyboardHidden"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
