--- a/TwoPageEBookReader/app/build.gradle
+++ b/TwoPageEBookReader/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'androidx.window:window:1.0.0-alpha10'
     implementation 'com.microsoft.design:fluent-system-icons:1.1.135'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
