--- a/FoldingVideo/app/build.gradle
+++ b/FoldingVideo/app/build.gradle
@@ -45,10 +45,10 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
 
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
     androidTestImplementation "androidx.test:rules:1.3.0"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
     androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
 }
