--- a/TwoNote/dependencies.gradle
+++ b/TwoNote/dependencies.gradle
@@ -8,7 +8,7 @@
 ext {
     gradlePluginVersion = "4.1.1"
     kotlinVersion = "1.4.21"
-    compileSdkVersion = 30
+    compileSdkVersion = 31
     buildToolsVersion = '30.0.3'
     targetSdkVersion = compileSdkVersion
     minSdkVersion = compileSdkVersion
@@ -28,14 +28,16 @@ ext {
     appCompatVersion = '1.2.0'
     constraintLayoutVersion = "2.1.0-beta02"
     ktxCoreVersion = '1.3.2'
-    ktxFragmentVersion = '1.3.1'
-    windowManagerVersion = "1.0.0-alpha09"
+    ktxFragmentVersion = '1.3.6'
+    ktxLifecycleVersion = '2.4.0-alpha03'
+    windowManagerVersion = "1.0.0-beta01"
 
     androidxDependencies = [
             appCompat       : "androidx.appcompat:appcompat:$appCompatVersion",
             constraintLayout: "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion",
             ktxCore         : "androidx.core:core-ktx:$ktxCoreVersion",
             ktxFragment     : "androidx.fragment:fragment-ktx:$ktxFragmentVersion",
+            ktxLifecycle    : "androidx.lifecycle:lifecycle-runtime-ktx:$ktxLifecycleVersion",
             windowManager   : "androidx.window:window:$windowManagerVersion",
     ]
 
@@ -54,15 +56,15 @@ ext {
     ]
 
     //Test dependencies version
-    junitVersion = "4.13"
+    junitVersion = "4.13.2"
 
     testDependencies = [
             junit: "junit:junit:$junitVersion"
     ]
 
     //Android test dependencies version
-    junitInstrumentationVersion = "1.1.1"
-    espressoCoreVersion = "3.2.0"
+    junitInstrumentationVersion = "1.1.3"
+    espressoCoreVersion = "3.4.0"
     testRulesVersion = "1.2.0"
     testRunnerVersion = "1.2.0"
     uiAutomatorVersion = "2.2.0"
