--- a/TwoNote/app/src/main/AndroidManifest.xml
+++ b/TwoNote/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.microsoft.device.display.wm_samples.twonote.MainActivity">
+        <activity
+            android:name="com.microsoft.device.display.wm_samples.twonote.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
