update to beta01 (#15)
* [SourceEditor] update to beta01

* [PhotoEditor] update to beta01

* [FoldingVideo] update to beta01

* [FoldingVideoPlusChat] update to beta01

* [TwoDo] update SlidingPaneLayout to alpha04

SPL alpha04 is compatible with window alpha10

* [eBookReader] update SlidingPaneLayout to alpha04

SPL alpha04 is compatible with window alpha10

* {TwoDo] fix build error android:exported="true"

* [eBookReader] update test dependencies

* [FoldingVideo] update test dependencies

* [TwoNote] update to beta01

* gradle updates

* cleanup

* remove commented gradle config

* remove commented gradle config

--- a/TwoNote/app/build.gradle
+++ b/TwoNote/app/build.gradle
@@ -13,12 +13,16 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     defaultConfig {
         applicationId "com.microsoft.device.display.wm_samples.twonote"
         minSdkVersion 29
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
 
         testInstrumentationRunner config.testInstrumentationRunner
     }
@@ -31,6 +35,7 @@ dependencies {
     implementation androidxDependencies.constraintLayout
     implementation androidxDependencies.ktxCore
     implementation androidxDependencies.ktxFragment
+    implementation androidxDependencies.ktxLifecycle
     implementation androidxDependencies.windowManager
 
     implementation googleDependencies.material
