--- a/FoldingVideo/app/build.gradle
+++ b/FoldingVideo/app/build.gradle
@@ -4,13 +4,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.foldingvideo"
         minSdkVersion 24
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -41,14 +41,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
-    implementation 'androidx.window:window:1.0.0-alpha10'
+    implementation 'androidx.window:window:1.0.0-beta01'
     implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
 
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
     androidTestImplementation "androidx.test:rules:1.3.0"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
     androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
 }
