--- a/TwoPageEBookReader/app/build.gradle
+++ b/TwoPageEBookReader/app/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.microsoft.device.wm_samples.ebook_reader_sample"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -34,10 +34,10 @@ android {
 
 dependencies {
 
-    def slidingpanelayout_version = '1.2.0-SNAPSHOT'
-    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout_version"
+//    def slidingpanelayout_version = '1.2.0-SNAPSHOT'
+//    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout_version"
 
-    //implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha03"
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha04"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
@@ -47,7 +47,8 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'androidx.window:window:1.0.0-alpha10'
     implementation 'com.microsoft.design:fluent-system-icons:1.1.135'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
