--- a/TwoPageEBookReader/app/build.gradle
+++ b/TwoPageEBookReader/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.microsoft.device.wm_samples.ebook_reader_sample"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -33,11 +33,7 @@ android {
 }
 
 dependencies {
-
-//    def slidingpanelayout_version = '1.2.0-SNAPSHOT'
-//    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout_version"
-
-    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha04"
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
@@ -45,7 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-    implementation 'androidx.window:window:1.0.0-alpha10'
+    implementation 'androidx.window:window:1.0.0-beta02'
     implementation 'com.microsoft.design:fluent-system-icons:1.1.135'
 
     testImplementation 'junit:junit:4.13.2'
