--- a/TwoDo/app/build.gradle
+++ b/TwoDo/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId 'com.microsoft.device.wm_samples.twodo'
         minSdkVersion 24
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,8 +41,8 @@ dependencies {
 //    def slidingpanelayout_version = '1.2.0-SNAPSHOT'
 //    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout_version"
 
-    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha04"
-    implementation 'androidx.window:window:1.0.0-alpha10'
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01"
+    implementation 'androidx.window:window:1.0.0-beta02'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:1.6.0"
