[TravelPlanner] add to build

--- a/.github/workflows/build_test_check.yml
+++ b/.github/workflows/build_test_check.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        projects: [ FoldingVideo, FoldingVideoPlusChat, PhotoEditor, TwoPageEBookReader, PhotoEditor, SourceEditor, TwoDo, TwoNote ]
+        projects: [ FoldingVideo, FoldingVideoPlusChat, PhotoEditor, TwoPageEBookReader, PhotoEditor, SourceEditor, TravelPlanner, TwoDo, TwoNote ]
       fail-fast: false
 
     steps:
