Use inksdk for inking in TwoNote (#24)
* Replace PenDrawView

Implement an InkView in place of the previous PenDrawView that handled draw events

* Implement basic InkView functions

* Implement eraser

* Add persistent images

Images retain color info when saved

* Add erasing and highlighting

* Added stroke width persistence

* Add undo and enable/disable features

* Reformat and lint

* Render on CPU instead of GPU

* Modify pressure settings and add special hover for highlighter

* Update peninfo tests with changed method parameters

* Fix bug when choosing white as custom color

* Add renderGPU as styleable attribute for InkView

* Update fragment handling to pass UI tests

* Update mockito version

* Disable highlighter for use with inksdk

* Add log statement to try/catch block

Co-authored-by: Parker Schroeder <ptschroeder@wisc.edu>

--- a/TwoNote/app/build.gradle
+++ b/TwoNote/app/build.gradle
@@ -26,6 +26,21 @@ android {
 
         testInstrumentationRunner config.testInstrumentationRunner
     }
+
+    buildTypes {
+
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
@@ -41,6 +56,10 @@ dependencies {
     implementation googleDependencies.material
 
     implementation microsoftDependencies.fluent
+    // To use maven central version:
+    // implementation microsoftDependencies.inkView
+    // To use locally modified version:
+    implementation project(path: ':ink')
 
     testImplementation testDependencies.junit
     androidTestImplementation instrumentationTestDependencies.junit
