[twonote] update to rc01

--- a/TwoNote/dependencies.gradle
+++ b/TwoNote/dependencies.gradle
@@ -28,11 +28,11 @@ ext {
 
     //AndroidX versions
     appCompatVersion = '1.2.0'
-    constraintLayoutVersion = "2.1.0-beta02"
+    constraintLayoutVersion = "2.1.2"
     ktxCoreVersion = '1.3.2'
     ktxFragmentVersion = '1.3.6'
-    ktxLifecycleVersion = '2.4.0-alpha03'
-    windowManagerVersion = "1.0.0-beta04"
+    ktxLifecycleVersion = '2.4.0'
+    windowManagerVersion = "1.0.0-rc01"
 
     androidxDependencies = [
             appCompat       : "androidx.appcompat:appcompat:$appCompatVersion",
