--- a/TravelPlanner/app/build.gradle
+++ b/TravelPlanner/app/build.gradle
@@ -14,9 +14,9 @@ android {
     defaultConfig {
         applicationId "com.example.travelplanner"
         minSdkVersion 29 // was 24
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 31
+        versionCode 2
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -44,28 +44,28 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
-    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.5.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01"
-    implementation "androidx.fragment:fragment-ktx:1.3.5"
+    implementation 'com.google.android.material:material:1.5.0-rc01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-rc01"
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation 'com.microsoft.design:fluent-system-icons:1.1.134@aar'
 
-    def room_version = "2.3.0"
+    def room_version = "2.4.0"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
-    def lifecycle_version = "2.3.1"
-    def arch_version = "2.1.0"
+    def lifecycle_version = "2.4.0"
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation 'com.microsoft.maps:maps-sdk:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
