--- a/TravelPlanner/app/src/main/AndroidManifest.xml
+++ b/TravelPlanner/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:name="android.hardware.camera2"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,13 +15,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TravelPlanner">
-        <activity android:name=".LaunchActivity">
+        android:theme="@style/Theme.TravelPlanner"
+        android:requestLegacyExternalStorage="true">
+        <activity android:name=".LaunchActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
