Update TwoNote dependencies and tests

--- a/TwoNote/app/build.gradle
+++ b/TwoNote/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     androidTestImplementation instrumentationTestDependencies.testRunner
     androidTestImplementation instrumentationTestDependencies.testRules
     androidTestImplementation instrumentationTestDependencies.uiAutomator
+    androidTestImplementation instrumentationTestDependencies.kotlinTesting
 }
