Add "Files" package to android manifest
So the launch intent for the Files package can be accessed (https://developer.android.com/training/package-visibility)

--- a/PhotoEditor/app/src/main/AndroidManifest.xml
+++ b/PhotoEditor/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             android:exported="true">
         </activity>
     </application>
-
+    <queries>
+        <package android:name="com.google.android.documentsui" />
+    </queries>
 
 </manifest>
